--- a/django-models/relationship_app/templates/relationship_app/register.html
+++ b/django-models/relationship_app/templates/relationship_app/register.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Register</h1>
-    <form method="post">
+    <form method="POST" action="">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Register</button>
+        <input type="submit" name="Register">
     </form>
 </body>
 </html>
