--- a/django_blog/blog/static/css/styles.css
+++ b/django_blog/blog/static/css/styles.css
@@ -43,3 +43,11 @@ footer {
     background-color: #333;
     color: white;
 }
+
+/* .content {
+    margin: 20px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+} */
