--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Blog Posts</h1>
-{% for post in posts %}
-    <div>
-        <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-        <p>By {{ post.author }} on {{ post.created_at }}</p>
-    </div>
-{% endfor %}
+<h1>All Posts</h1>
+<a href="{% url 'blog:post-create' %}" class="btn btn-primary">Create New Post</a>
+<ul>
+    {% for post in posts %}
+    <li>
+        <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
+        <p>{{ post.content|truncatewords:20 }}</p>
+        <p><a href="{{ post.get_absolute_url }}">Read More</a></p>
+    </li>
+    {% endfor %}
+</ul>
 {% endblock %}
