--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,11 +1,24 @@
-{% extends "base.html" %}
+<h2>Comments</h2>
+<ul>
+    {% for comment in post.comments.all %}
+    <li>
+        <strong>{{ comment.author }}</strong> - {{ comment.created_at|date:"F j, Y, g:i a" }}
+        <p>{{ comment.content }}</p>
+        {% if request.user == comment.author %}
+        <a href="{% url 'blog:comment-update' comment.pk %}">Edit</a> | 
+        <a href="{% url 'blog:comment-delete' comment.pk %}">Delete</a>
+        {% endif %}
+    </li>
+    {% endfor %}
+</ul>
 
-{% block content %}
-<h1>{{ post.title }}</h1>
-<p>By {{ post.author }} on {{ post.created_at }}</p>
-<p>{{ post.content }}</p>
-{% if request.user == post.author %}
-    <a href="{% url 'blog:post-update' post.pk %}" class="btn btn-warning">Edit</a>
-    <a href="{% url 'blog:post-delete' post.pk %}" class="btn btn-danger">Delete</a>
+<h3>Leave a Comment</h3>
+{% if user.is_authenticated %}
+<form method="post" action="{% url 'blog:comment-add' post.id %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Post Comment</button>
+</form>
+{% else %}
+<p>You must <a href="{% url 'login' %}">log in</a> to comment.</p>
 {% endif %}
-{% endblock %}
