--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -7,6 +7,12 @@
         {% if request.user == comment.author %}
         <a href="{% url 'blog:comment-update' comment.pk %}">Edit</a> | 
         <a href="{% url 'blog:comment-delete' comment.pk %}">Delete</a>
+        <p>Tags:
+            {% for tag in post.tags.all %}
+                <a href="{% url 'posts-by-tag' tag.name %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+            {% endfor %}
+        </p>
+        
         {% endif %}
     </li>
     {% endfor %}
